[gd_scene load_steps=6 format=3 uid="uid://dxwo0jk5aojhw"]

[ext_resource type="Script" uid="uid://dgb8puvhc1lg1" path="res://scripts/level.gd" id="1_w7c3h"]
[ext_resource type="PackedScene" uid="uid://urwuvj1rqhwd" path="res://scenes/player.tscn" id="2_w8frs"]
[ext_resource type="Texture2D" uid="uid://dqoaktxad8s4" path="res://icon.svg" id="3_w8frs"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_mx8sn"]
size = Vector2(548, 20)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_w8frs"]
size = Vector2(1286, 20)

[node name="Level" type="Node2D"]
script = ExtResource("1_w7c3h")

[node name="Player" parent="." instance=ExtResource("2_w8frs")]
position = Vector2(14, 217)
collision_mask = 6

[node name="Ground" type="StaticBody2D" parent="."]
position = Vector2(-100, 2)
collision_layer = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Ground"]
position = Vector2(236, 245)
shape = SubResource("RectangleShape2D_mx8sn")

[node name="Sprite2D" type="Sprite2D" parent="Ground"]
modulate = Color(0, 0, 0, 1)
position = Vector2(235, 245)
scale = Vector2(4.296875, 0.171875)
texture = ExtResource("3_w8frs")

[node name="DeathZone" type="Area2D" parent="."]
position = Vector2(237, 267)
collision_layer = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="DeathZone"]
shape = SubResource("RectangleShape2D_w8frs")

[node name="StartPosition" type="Marker2D" parent="."]
position = Vector2(14, 219)

[connection signal="body_entered" from="DeathZone" to="." method="_on_death_zone_body_entered"]
