extends Node2D

@export var next_level: PackedScene = null

@onready var start_position = $StartPosition
@onready var exit = $Exit
@onready var death_zone = $DeathZone

var player = null

# Called when the node enters the scene tree for the first time.
func _ready() -> void:
	player = get_tree().get_first_node_in_group("player")
	if player != null:
		player.global_position = start_position.get_spawn_position()
	var traps = get_tree().get_nodes_in_group("traps")
	for trap in traps:
		# trap.connect("touched_player", _on_trap_touched_player)
		trap.touched_player.connect(_on_trap_touched_player)
	exit.body_entered.connect(_on_exit_body_entered)
	death_zone.body_entered.connect(_on_death_zone_body_entered)


# Called every frame. 'delta' is the elapsed time since the previous frame.
func _process(delta: float) -> void:
	if Input.is_action_just_pressed("quit"):
		get_tree().quit()
	elif Input.is_action_just_pressed("reset"):
		get_tree().reload_current_scene()


func _on_death_zone_body_entered(body: Node2D) -> void:
	reset_player()
	


func _on_trap_touched_player() -> void:
	reset_player()

func reset_player() -> void:
	player.velocity = Vector2.ZERO
	player.global_position = start_position.get_spawn_position()
	
func _on_exit_body_entered(body):
	if body is Player:
		player.active = false
		exit.animate()
		if next_level != null:
			await get_tree().create_timer(1.5).timeout
			get_tree().change_scene_to_packed(next_level)
